# lincoln-commons-aro-monitor

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: aro-monitor-scheduler.yml  monitor.yml
src/: __init__.py  scraper.py
tests/: __init__.py  test_scraper.py
